debian: Add repository/Default

--- a/debian/install
+++ b/debian/install
@@ -3,4 +3,5 @@ config/drivers/* var/lib/aiv/drivers/
 repository/econfig/* var/lib/aiv/repository/econfig/
 repository/Config/* var/lib/aiv/repository/Config/
 repository/images/* var/lib/aiv/repository/images/
+repository/Default/* var/lib/aiv/repository/Default
 debian/bin/aiv usr/bin/
